@@ -1,3 +1,11 @@
+2008-06-12 Borut Razem <borut.razem AT siol.net>
+
+	* src/pic16/gen.c: applied patches :
+	  2030306: [1/3] PIC16: fix failing rotate.c tests on 16-bit variables,
+	  2030307: [2/3] PIC16: fix failing rotate.c tests for 32-bit var (1),
+	  2030310: [3/3] PIC16: fix failing rotate.c tests for 32-bit var (2),
+	  thanks Mauro Giachero
+
 2008-07-13 Philipp Klaus Krause <pkk AT spth.de>
 	* src/port.h: Fixed typo in comment
 
